// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`trpc react generator > AgentCore Harness AG-UI connection > wires a stock HttpAgent at the API /agui route for Cognito auth > useAguiMyHarness-Cognito.tsx 1`] = `
"import { HttpAgent } from '@ag-ui/client';
import type { AbstractAgent, Message, RunAgentInput } from '@ag-ui/client';
import { useEffect, useMemo } from 'react';
import { useRuntimeConfig } from './useRuntimeConfig';
import { useAuth } from 'react-oidc-context';
import { useTestApiClient } from './useTestApi';

class CognitoHttpAgent extends HttpAgent {
  getAccessToken: () => string | undefined;

  constructor(
    config: ConstructorParameters<typeof HttpAgent>[0],
    getAccessToken: () => string | undefined,
  ) {
    super(config);
    this.getAccessToken = getAccessToken;
  }

  protected override requestInit(input: RunAgentInput): RequestInit {
    const init = super.requestInit(input);
    const token = this.getAccessToken();
    init.headers = {
      ...(init.headers as Record<string, string>),
      ...(token ? { Authorization: \`Bearer \${token}\` } : {}),
    };
    return init;
  }

  override clone(): CognitoHttpAgent {
    const cloned = super.clone() as CognitoHttpAgent;
    cloned.getAccessToken = this.getAccessToken;
    return cloned;
  }
}

/**
 * Reconstructs the thread from the API's \`history\` procedure — the
 * Memory-backed durable read path (the Harness commits each turn to Memory
 * as it completes, independently of the SSE connection). Called on mount
 * and after every run finalizes, whether it succeeded, errored, or the SSE
 * connection dropped mid-turn, so the UI always converges on the server's
 * canonical transcript instead of reconciling two id spaces client-side.
 */
async function hydrateFromHistory(
  agent: AbstractAgent,
  historyClient: ReturnType<typeof useTestApiClient>,
): Promise<void> {
  const { messages } = await historyClient.history.query({
    threadId: agent.threadId,
  });
  // AgentCore Memory is eventually consistent: a rehydrate triggered by
  // onRunFinalized can read the thread before the just-finished turn is
  // listable, returning fewer messages than are already on screen. Applying
  // that stale snapshot would delete the message the user just watched stream
  // in. Memory is append-only, so never let a rehydrate shrink the transcript
  // — only apply a read at least as complete as the current client state (an
  // equal count still heals a partial/dropped turn with the same message).
  if (messages.length < agent.messages.length) {
    return;
  }
  agent.setMessages(
    messages.map((m): Message => {
      if (m.role === 'tool') {
        return {
          id: crypto.randomUUID(),
          role: 'tool',
          content: m.content,
          toolCallId: m.toolCallId!,
        };
      }
      if (m.role === 'assistant') {
        return {
          id: crypto.randomUUID(),
          role: 'assistant',
          content: m.content,
          ...(m.toolCalls ? { toolCalls: m.toolCalls } : {}),
        };
      }
      return { id: crypto.randomUUID(), role: 'user', content: m.content };
    }),
  );
}

export const useAguiMyHarness = (): Record<string, AbstractAgent> => {
  const runtimeConfig = useRuntimeConfig();
  const apiUrl = runtimeConfig.apis.TestApi;
  const historyClient = useTestApiClient();
  const auth = useAuth();

  const url = useMemo(() => \`\${apiUrl.replace(/\\/$/, '')}/agui\`, [apiUrl]);

  const agent = useMemo((): AbstractAgent => {
    return new CognitoHttpAgent({ url }, () => auth.user?.access_token);
  }, [url, auth]);

  // Hydrate on mount/reconnect, and again whenever a run finalizes — a
  // dropped SSE connection never loses the turn server-side, so re-reading
  // \`history\` after the run ends heals any partial client-side state.
  useEffect(() => {
    let cancelled = false;
    const rehydrate = () => {
      hydrateFromHistory(agent, historyClient).catch((err) => {
        console.error('Failed to hydrate my-harness thread from history', err);
      });
    };
    rehydrate();
    const { unsubscribe } = agent.subscribe({
      onRunFinalized: () => {
        if (!cancelled) rehydrate();
      },
    });
    return () => {
      cancelled = true;
      unsubscribe();
    };
  }, [agent, historyClient]);

  return useMemo(
    (): Record<string, AbstractAgent> => ({ 'my-harness': agent }),
    [agent],
  );
};
"
`;

exports[`trpc react generator > AgentCore Harness AG-UI connection > wires a stock HttpAgent at the API /agui route for IAM auth > useAguiMyHarness-IAM.tsx 1`] = `
"import { HttpAgent } from '@ag-ui/client';
import type { AbstractAgent, Message } from '@ag-ui/client';
import { useEffect, useMemo } from 'react';
import { useRuntimeConfig } from './useRuntimeConfig';
import { useSigV4 } from './useSigV4';
import { useTestApiClient } from './useTestApi';

/**
 * Reconstructs the thread from the API's \`history\` procedure — the
 * Memory-backed durable read path (the Harness commits each turn to Memory
 * as it completes, independently of the SSE connection). Called on mount
 * and after every run finalizes, whether it succeeded, errored, or the SSE
 * connection dropped mid-turn, so the UI always converges on the server's
 * canonical transcript instead of reconciling two id spaces client-side.
 */
async function hydrateFromHistory(
  agent: AbstractAgent,
  historyClient: ReturnType<typeof useTestApiClient>,
): Promise<void> {
  const { messages } = await historyClient.history.query({
    threadId: agent.threadId,
  });
  // AgentCore Memory is eventually consistent: a rehydrate triggered by
  // onRunFinalized can read the thread before the just-finished turn is
  // listable, returning fewer messages than are already on screen. Applying
  // that stale snapshot would delete the message the user just watched stream
  // in. Memory is append-only, so never let a rehydrate shrink the transcript
  // — only apply a read at least as complete as the current client state (an
  // equal count still heals a partial/dropped turn with the same message).
  if (messages.length < agent.messages.length) {
    return;
  }
  agent.setMessages(
    messages.map((m): Message => {
      if (m.role === 'tool') {
        return {
          id: crypto.randomUUID(),
          role: 'tool',
          content: m.content,
          toolCallId: m.toolCallId!,
        };
      }
      if (m.role === 'assistant') {
        return {
          id: crypto.randomUUID(),
          role: 'assistant',
          content: m.content,
          ...(m.toolCalls ? { toolCalls: m.toolCalls } : {}),
        };
      }
      return { id: crypto.randomUUID(), role: 'user', content: m.content };
    }),
  );
}

export const useAguiMyHarness = (): Record<string, AbstractAgent> => {
  const runtimeConfig = useRuntimeConfig();
  const apiUrl = runtimeConfig.apis.TestApi;
  const historyClient = useTestApiClient();
  const sigv4 = useSigV4();

  // Deployed: a Lambda Function URL (RESPONSE_STREAM) exposed as \`apis.Agui\`;
  // aws4fetch signs it for the 'lambda' service automatically from its host.
  // Local dev: fall back to the tRPC dev server's \`/agui\` route.
  const url = useMemo(
    () => runtimeConfig.apis.Agui ?? \`\${apiUrl.replace(/\\/$/, '')}/agui\`,
    [runtimeConfig.apis.Agui, apiUrl],
  );

  const agent = useMemo((): AbstractAgent => {
    return new HttpAgent({
      url,
      fetch: sigv4.fetch as (
        url: string,
        init: RequestInit,
      ) => Promise<Response>,
    });
  }, [url, sigv4]);

  // Hydrate on mount/reconnect, and again whenever a run finalizes — a
  // dropped SSE connection never loses the turn server-side, so re-reading
  // \`history\` after the run ends heals any partial client-side state.
  useEffect(() => {
    let cancelled = false;
    const rehydrate = () => {
      hydrateFromHistory(agent, historyClient).catch((err) => {
        console.error('Failed to hydrate my-harness thread from history', err);
      });
    };
    rehydrate();
    const { unsubscribe } = agent.subscribe({
      onRunFinalized: () => {
        if (!cancelled) rehydrate();
      },
    });
    return () => {
      cancelled = true;
      unsubscribe();
    };
  }, [agent, historyClient]);

  return useMemo(
    (): Record<string, AbstractAgent> => ({ 'my-harness': agent }),
    [agent],
  );
};
"
`;

exports[`trpc react generator > REST API (rest-lambda) > should generate REST API client provider with splitLink for Cognito auth > TestApiClientProvider-REST-Cognito.tsx 1`] = `
"import { AppRouter } from 'backend';
import { useQueryClient } from '@tanstack/react-query';
import { createTRPCOptionsProxy } from '@trpc/tanstack-react-query';
import { createContext, FC, PropsWithChildren, useMemo } from 'react';
import { useRuntimeConfig } from '../hooks/useRuntimeConfig';
import {
  TRPCClient,
  createTRPCClient,
  httpLink,
  httpSubscriptionLink,
  splitLink,
} from '@trpc/client';
import { EventSourcePolyfill } from 'event-source-polyfill';
import { useAuth } from 'react-oidc-context';

export interface TestApiTRPCContextValue {
  optionsProxy: ReturnType<typeof createTRPCOptionsProxy<AppRouter>>;
  client: TRPCClient<AppRouter>;
}

export const TestApiTRPCContext = createContext<TestApiTRPCContextValue | null>(
  null,
);

export const TestApiClientProvider: FC<PropsWithChildren> = ({ children }) => {
  const queryClient = useQueryClient();
  const runtimeConfig = useRuntimeConfig();
  const apiUrl = runtimeConfig.apis.TestApi;
  const auth = useAuth();
  const user = auth?.user;

  const container = useMemo<TestApiTRPCContextValue>(() => {
    const client = createTRPCClient<AppRouter>({
      links: [
        splitLink({
          condition: (op) => op.type === 'subscription',
          true: httpSubscriptionLink({
            url: apiUrl,
            EventSource: EventSourcePolyfill,
            eventSourceOptions: async ({ op }) => {
              return {
                headers: {
                  Authorization: \`Bearer \${user?.access_token}\`,
                },
              };
            },
          }),
          false: httpLink({
            url: apiUrl,
            headers: {
              Authorization: \`Bearer \${user?.access_token}\`,
            },
          }),
        }),
      ],
    });

    const optionsProxy = createTRPCOptionsProxy<AppRouter>({
      client,
      queryClient,
    });

    return { optionsProxy, client };
  }, [apiUrl, queryClient, user]);

  return (
    <TestApiTRPCContext.Provider value={container}>
      {children}
    </TestApiTRPCContext.Provider>
  );
};

export default TestApiClientProvider;
"
`;

exports[`trpc react generator > REST API (rest-lambda) > should generate REST API client provider with splitLink for Custom auth > TestApiClientProvider-REST-Custom.tsx 1`] = `
"import { AppRouter } from 'backend';
import { useQueryClient } from '@tanstack/react-query';
import { createTRPCOptionsProxy } from '@trpc/tanstack-react-query';
import { createContext, FC, PropsWithChildren, useMemo } from 'react';
import { useRuntimeConfig } from '../hooks/useRuntimeConfig';
import {
  TRPCClient,
  createTRPCClient,
  httpLink,
  httpSubscriptionLink,
  splitLink,
} from '@trpc/client';
import { EventSourcePolyfill } from 'event-source-polyfill';

export interface TestApiTRPCContextValue {
  optionsProxy: ReturnType<typeof createTRPCOptionsProxy<AppRouter>>;
  client: TRPCClient<AppRouter>;
}

export const TestApiTRPCContext = createContext<TestApiTRPCContextValue | null>(
  null,
);

export const TestApiClientProvider: FC<PropsWithChildren> = ({ children }) => {
  const queryClient = useQueryClient();
  const runtimeConfig = useRuntimeConfig();
  const apiUrl = runtimeConfig.apis.TestApi;

  const container = useMemo<TestApiTRPCContextValue>(() => {
    const client = createTRPCClient<AppRouter>({
      links: [
        splitLink({
          condition: (op) => op.type === 'subscription',
          true: httpSubscriptionLink({
            url: apiUrl,
            EventSource: EventSourcePolyfill,
            eventSourceOptions: async ({ op }) => {
              // TODO: Add headers required by your custom authorizer
              return { headers: {} };
            },
          }),
          false: httpLink({
            url: apiUrl,
            // TODO: Add headers required by your custom authorizer
            headers: {},
          }),
        }),
      ],
    });

    const optionsProxy = createTRPCOptionsProxy<AppRouter>({
      client,
      queryClient,
    });

    return { optionsProxy, client };
  }, [apiUrl, queryClient]);

  return (
    <TestApiTRPCContext.Provider value={container}>
      {children}
    </TestApiTRPCContext.Provider>
  );
};

export default TestApiClientProvider;
"
`;

exports[`trpc react generator > REST API (rest-lambda) > should generate REST API client provider with splitLink for IAM auth > TestApiClientProvider-REST-IAM.tsx 1`] = `
"import { AppRouter } from 'backend';
import { useQueryClient } from '@tanstack/react-query';
import { createTRPCOptionsProxy } from '@trpc/tanstack-react-query';
import { createContext, FC, PropsWithChildren, useMemo } from 'react';
import { useRuntimeConfig } from '../hooks/useRuntimeConfig';
import {
  TRPCClient,
  createTRPCClient,
  httpLink,
  httpSubscriptionLink,
  splitLink,
} from '@trpc/client';
import { EventSourcePolyfill } from 'event-source-polyfill';
import { useSigV4 } from '../hooks/useSigV4';

export interface TestApiTRPCContextValue {
  optionsProxy: ReturnType<typeof createTRPCOptionsProxy<AppRouter>>;
  client: TRPCClient<AppRouter>;
}

export const TestApiTRPCContext = createContext<TestApiTRPCContextValue | null>(
  null,
);

export const TestApiClientProvider: FC<PropsWithChildren> = ({ children }) => {
  const queryClient = useQueryClient();
  const runtimeConfig = useRuntimeConfig();
  const apiUrl = runtimeConfig.apis.TestApi;
  const sigv4Client = useSigV4();

  const container = useMemo<TestApiTRPCContextValue>(() => {
    const client = createTRPCClient<AppRouter>({
      links: [
        splitLink({
          condition: (op) => op.type === 'subscription',
          true: httpSubscriptionLink({
            url: apiUrl,
            EventSource: EventSourcePolyfill,
            eventSourceOptions: async ({ op }) => {
              const url =
                \`\${apiUrl.replace(/\\/$/, '')}/\${op.path}\` +
                (op.input !== undefined
                  ? \`?input=\${encodeURIComponent(JSON.stringify(op.input))}\`
                  : '');
              const signed = await sigv4Client.sign(url, { method: 'GET' });
              const headers: Record<string, string> = {};
              signed.headers.forEach((v, k) => {
                headers[k] = v;
              });
              return { headers };
            },
          }),
          false: httpLink({
            url: apiUrl,
            fetch: sigv4Client.fetch,
          }),
        }),
      ],
    });

    const optionsProxy = createTRPCOptionsProxy<AppRouter>({
      client,
      queryClient,
    });

    return { optionsProxy, client };
  }, [apiUrl, queryClient, sigv4Client]);

  return (
    <TestApiTRPCContext.Provider value={container}>
      {children}
    </TestApiTRPCContext.Provider>
  );
};

export default TestApiClientProvider;
"
`;

exports[`trpc react generator > should generate trpc react files > TestApiClientProvider.tsx 1`] = `
"import { AppRouter } from 'backend';
import { useQueryClient } from '@tanstack/react-query';
import { createTRPCOptionsProxy } from '@trpc/tanstack-react-query';
import { createContext, FC, PropsWithChildren, useMemo } from 'react';
import { useRuntimeConfig } from '../hooks/useRuntimeConfig';
import {
  HTTPLinkOptions,
  TRPCClient,
  createTRPCClient,
  httpLink,
} from '@trpc/client';

export interface TestApiTRPCContextValue {
  optionsProxy: ReturnType<typeof createTRPCOptionsProxy<AppRouter>>;
  client: TRPCClient<AppRouter>;
}

export const TestApiTRPCContext = createContext<TestApiTRPCContextValue | null>(
  null,
);

export const TestApiClientProvider: FC<PropsWithChildren> = ({ children }) => {
  const queryClient = useQueryClient();
  const runtimeConfig = useRuntimeConfig();
  const apiUrl = runtimeConfig.apis.TestApi;

  const container = useMemo<TestApiTRPCContextValue>(() => {
    const linkOptions: HTTPLinkOptions<any> = {
      url: apiUrl,
      // TODO: Add headers required by your custom authorizer
      headers: {},
    };

    const client = createTRPCClient<AppRouter>({
      links: [httpLink(linkOptions)],
    });

    const optionsProxy = createTRPCOptionsProxy<AppRouter>({
      client,
      queryClient,
    });

    return { optionsProxy, client };
  }, [apiUrl, queryClient]);

  return (
    <TestApiTRPCContext.Provider value={container}>
      {children}
    </TestApiTRPCContext.Provider>
  );
};

export default TestApiClientProvider;
"
`;

exports[`trpc react generator > should generate trpc react files > useTestApi.tsx 1`] = `
"import { useContext } from 'react';
import {
  TestApiTRPCContext,
  type TestApiTRPCContextValue,
} from '../components/TestApiClientProvider';

export const useTestApi = (): TestApiTRPCContextValue['optionsProxy'] => {
  const container = useContext(TestApiTRPCContext);
  if (!container) {
    throw new Error('useTestApi must be used within TestApiClientProvider');
  }
  return container.optionsProxy;
};

export const useTestApiClient = (): TestApiTRPCContextValue['client'] => {
  const container = useContext(TestApiTRPCContext);
  if (!container) {
    throw new Error(
      'useTestApiClient must be used within TestApiClientProvider',
    );
  }
  return container.client;
};
"
`;

exports[`trpc react generator > should handle Cognito auth option > TestApiClientProvider-Cognito.tsx 1`] = `
"import { AppRouter } from 'backend';
import { useQueryClient } from '@tanstack/react-query';
import { createTRPCOptionsProxy } from '@trpc/tanstack-react-query';
import { createContext, FC, PropsWithChildren, useMemo } from 'react';
import { useRuntimeConfig } from '../hooks/useRuntimeConfig';
import {
  HTTPLinkOptions,
  TRPCClient,
  createTRPCClient,
  httpLink,
} from '@trpc/client';
import { useAuth } from 'react-oidc-context';

export interface TestApiTRPCContextValue {
  optionsProxy: ReturnType<typeof createTRPCOptionsProxy<AppRouter>>;
  client: TRPCClient<AppRouter>;
}

export const TestApiTRPCContext = createContext<TestApiTRPCContextValue | null>(
  null,
);

export const TestApiClientProvider: FC<PropsWithChildren> = ({ children }) => {
  const queryClient = useQueryClient();
  const runtimeConfig = useRuntimeConfig();
  const apiUrl = runtimeConfig.apis.TestApi;
  const auth = useAuth();
  const user = auth?.user;

  const container = useMemo<TestApiTRPCContextValue>(() => {
    const linkOptions: HTTPLinkOptions<any> = {
      url: apiUrl,
      headers: {
        Authorization: \`Bearer \${user?.access_token}\`,
      },
    };

    const client = createTRPCClient<AppRouter>({
      links: [httpLink(linkOptions)],
    });

    const optionsProxy = createTRPCOptionsProxy<AppRouter>({
      client,
      queryClient,
    });

    return { optionsProxy, client };
  }, [apiUrl, queryClient, user]);

  return (
    <TestApiTRPCContext.Provider value={container}>
      {children}
    </TestApiTRPCContext.Provider>
  );
};

export default TestApiClientProvider;
"
`;

exports[`trpc react generator > should handle IAM auth option > TestApiClientProvider-IAM.tsx 1`] = `
"import { AppRouter } from 'backend';
import { useQueryClient } from '@tanstack/react-query';
import { createTRPCOptionsProxy } from '@trpc/tanstack-react-query';
import { createContext, FC, PropsWithChildren, useMemo } from 'react';
import { useRuntimeConfig } from '../hooks/useRuntimeConfig';
import {
  HTTPLinkOptions,
  TRPCClient,
  createTRPCClient,
  httpLink,
} from '@trpc/client';
import { useSigV4 } from '../hooks/useSigV4';

export interface TestApiTRPCContextValue {
  optionsProxy: ReturnType<typeof createTRPCOptionsProxy<AppRouter>>;
  client: TRPCClient<AppRouter>;
}

export const TestApiTRPCContext = createContext<TestApiTRPCContextValue | null>(
  null,
);

export const TestApiClientProvider: FC<PropsWithChildren> = ({ children }) => {
  const queryClient = useQueryClient();
  const runtimeConfig = useRuntimeConfig();
  const apiUrl = runtimeConfig.apis.TestApi;
  const sigv4Client = useSigV4();

  const container = useMemo<TestApiTRPCContextValue>(() => {
    const linkOptions: HTTPLinkOptions<any> = {
      url: apiUrl,
      fetch: sigv4Client.fetch,
    };

    const client = createTRPCClient<AppRouter>({
      links: [httpLink(linkOptions)],
    });

    const optionsProxy = createTRPCOptionsProxy<AppRouter>({
      client,
      queryClient,
    });

    return { optionsProxy, client };
  }, [apiUrl, queryClient, sigv4Client]);

  return (
    <TestApiTRPCContext.Provider value={container}>
      {children}
    </TestApiTRPCContext.Provider>
  );
};

export default TestApiClientProvider;
"
`;

exports[`trpc react generator > should handle IAM auth option > useSigV4.tsx 1`] = `
"import { AwsClient } from 'aws4fetch';
import { fromCognitoIdentityPool } from '@aws-sdk/credential-provider-cognito-identity';
import { useCallback, useMemo, useRef } from 'react';
import { useAuth } from 'react-oidc-context';
import { useRuntimeConfig } from './useRuntimeConfig';
import {
  AwsCredentialIdentity,
  AwsCredentialIdentityProvider,
} from '@smithy/types';

// Capture the native fetch before any monkey-patching can occur.
const nativeFetch = globalThis.fetch.bind(globalThis);

// Credential expiration grace time before considering credentials as expired
const CREDENTIAL_EXPIRY_OFFSET_MILLIS = 30 * 1000;

type AwsSignInput = Parameters<AwsClient['sign']>[0];
type AwsSignInit = Parameters<AwsClient['sign']>[1];

export interface SigV4Client {
  /** A SigV4-signing fetch drop-in replacement. */
  fetch: typeof globalThis.fetch;
  /** Signs a request. Same parameters as AwsClient.sign(). Returns an unsigned Request when signing is skipped. */
  sign: AwsClient['sign'];
}

export const useSigV4 = (): SigV4Client => {
  const { cognitoProps } = useRuntimeConfig();
  const auth = useAuth();
  const user = auth?.user;

  const cachedCredentials = useRef<{ [key: string]: AwsCredentialIdentity }>(
    {},
  );

  const skipSigning = !cognitoProps && import.meta.env.MODE === 'local-dev';

  const withCachedCredentials = useCallback(
    async (
      provider: AwsCredentialIdentityProvider,
      ...cacheKeys: string[]
    ): Promise<AwsCredentialIdentity> => {
      const key = \`sigv4/\${cacheKeys.join('/')}\`;
      const cachedCreds = cachedCredentials.current[key];
      if (
        cachedCreds &&
        cachedCreds.expiration &&
        cachedCreds.expiration.getTime() >
          Date.now() + CREDENTIAL_EXPIRY_OFFSET_MILLIS
      ) {
        return cachedCreds;
      }
      const credentials = await provider();
      cachedCredentials.current[key] = credentials;
      return credentials;
    },
    [],
  );

  const getAwsClient = useCallback(async (): Promise<AwsClient> => {
    if (!cognitoProps) {
      throw new Error('cognitoProps is undefined!');
    }
    if (!user?.id_token) {
      throw new Error('user.id_token is undefined!');
    }

    const credentialsFromCognitoIdentityPool = fromCognitoIdentityPool({
      clientConfig: { region: cognitoProps.region },
      identityPoolId: cognitoProps.identityPoolId,
      logins: {
        [\`cognito-idp.\${cognitoProps.region}.amazonaws.com/\${cognitoProps.userPoolId}\`]:
          user.id_token,
      },
    });
    const credential = await withCachedCredentials(
      credentialsFromCognitoIdentityPool,
      cognitoProps.identityPoolId,
      user.profile.sub,
    );
    return new AwsClient(credential);
  }, [cognitoProps, user?.id_token, user?.profile.sub, withCachedCredentials]);

  const sigv4Fetch: typeof globalThis.fetch = useCallback(
    async (input: RequestInfo | URL, init?: RequestInit | undefined) => {
      if (skipSigning) {
        return nativeFetch(input, init);
      }
      const awsClient = await getAwsClient();
      return awsClient.fetch(input, init);
    },
    [skipSigning, getAwsClient],
  );

  const sign = useCallback(
    async (input: AwsSignInput, init?: AwsSignInit): Promise<Request> => {
      if (skipSigning) {
        return new Request(input.toString(), init ?? undefined);
      }
      const awsClient = await getAwsClient();
      return awsClient.sign(input, init);
    },
    [skipSigning, getAwsClient],
  );

  return useMemo(
    (): SigV4Client => ({ fetch: sigv4Fetch, sign }),
    [sigv4Fetch, sign],
  );
};
"
`;

exports[`trpc react generator > should modify main.tsx correctly > main.tsx 1`] = `
"import TestApiClientProvider from './components/TestApiClientProvider';
import QueryClientProvider from './components/QueryClientProvider';
import RuntimeConfigProvider from './components/RuntimeConfig';

import { RouterProvider } from '@tanstack/react-router';

const App = () => <RouterProvider router={router} />;

export function Main() {
  return (
    <RuntimeConfigProvider>
      <QueryClientProvider>
        <TestApiClientProvider>
          <App />
        </TestApiClientProvider>
      </QueryClientProvider>
    </RuntimeConfigProvider>
  );
}
"
`;
